--- a/1.5.0/amd64/packages/autoware-localrepo/debian/changelog
+++ b/1.5.0/amd64/packages/autoware-localrepo/debian/changelog
@@ -1,4 +1,4 @@
-autoware-localrepo (1.5.0-1) jammy; urgency=medium
+autoware-localrepo (1.5.0-1ubuntu2204) jammy; urgency=medium
 
   * Autoware 1.5.0 AMD64 local repository configuration
 
