--- a/1.5.0/amd64/packages/autoware-theme/debian/changelog
+++ b/1.5.0/amd64/packages/autoware-theme/debian/changelog
@@ -1,4 +1,4 @@
-autoware-theme (1.5.0-1) jammy; urgency=medium
+autoware-theme-1-5-0 (1.5.0-1) jammy; urgency=medium
 
   * Initial release
   * Qt5 theme and RViz icons for Autoware
