--- a/1.5.0/amd64/packages/autoware-data/debian/changelog
+++ b/1.5.0/amd64/packages/autoware-data/debian/changelog
@@ -1,4 +1,4 @@
-autoware-data (1.5.0-1) jammy; urgency=medium
+autoware-data-1-5-0 (1.5.0-1) jammy; urgency=medium
 
   * Initial release
   * Package ML models for Autoware perception
