--- a/1.5.0/amd64/packages/autoware-full/debian/changelog
+++ b/1.5.0/amd64/packages/autoware-full/debian/changelog
@@ -1,4 +1,4 @@
-autoware-full (1.5.0-1) jammy; urgency=medium
+autoware-full-1-5-0 (1.5.0-1) jammy; urgency=medium
 
   * Initial release for Autoware 1.5.0
 
